# EdgeHunter-Kernel

./: .gitignore  J3_candidate.patch  J7_SUMMARY.md  README.md  pyproject.toml  soak_run.ps1
.claude/: settings.local.json
.sync_backup/J3_20260107_145945/src/: gates.py  ui.py
docs/: AGENT_BRIEF.md  Core_Kernel_V1a_Spec_FINAL.md  FEED_SELECTOR_IMPLEMENTATION.md  INDEX.md  J0_GUARDRAILS.md  J1_IMPLEMENTATION.md  J2_IMPLEMENTATION.md  J3_IMPLEMENTATION.md  MOCK_ADAPTER_IMPLEMENTATION.md  V1A_CHECKLIST.md  V1B_OUTLINE.md  V1a_roadmap.md
examples/: __init__.py  j1_adapter_demo.py
src/: __init__.py  adapter_runner.py  clock.py  command_queue.py  datahub.py  engine.py  event_queue.py  events.py  feed_config.py  gates.py  ibkr_adapter.py  main.py  mock_adapter.py  snapshot.py  triggercard_logger.py  triggercard_validator.py  ui.py
tests/: __init__.py  test_adapter_runner_eventloop.py  test_contract_and_staleness.py  test_feed_selector.py  test_ibkr_adapter.py  test_j0_guardrails.py  test_j1_adapter.py  test_j2_time_liveness.py  test_j3_command_queue.py  test_j3_gates.py  test_j4_snapshot_contract.py  test_j5_gates_multi_reason.py  test_j6_triggercard_logger.py  test_j7_soak_integration.py  test_j7_triggercard_validator.py  test_max_runtime.py  test_mock_adapter.py  test_snapshot_atomic.py  test_snapshot_monotonic.py
